# qlik-test-Anna

./: Main.py  README.md  pyproject.toml
qlik_test_Anna/: __init__.py
