[tool.poetry]
name = "qlik-test-anna"
version = "0.1.0"
description = ""
authors = ["Anna trebunko <you@example.com>"]
license = "l"
readme = "README.md"
packages = [{include = "qlik_test_anna"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
